2006-02-06  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_connect): Initializing nresults to zero and
	freeing E2kResult.
	(e_book_backend_exchange_modify_contact): Similar.

	* mail/mail-stub-exchange.c (get_folder_online)(sync_deletions)
	(get_stickynote)(build_message_from_document)
	(unmangle_delegated_meeting_request): Similar.

	* calendar/e-cal-backend-exchange.c (open_calendar): Similar.
	(get_object): Not cloning alreadry memory allocated icalcomponent.
	(check_change_type): Freeing e-cal component inside the loop.
	
	* calendar/e-cal-backend-exchange-calendar.c (add_ical): Not cloning
	alreadry memory allocated icalcomponent.

	* storage/exchange-config-listener.c (ex_set_relative_uri): Freeing 
	relative URI.
	(migrate_account_esource): Freeing CamelURL, and url_string.
	(exchange_camel_urls_is_equal): Using camel_url_free() to free the 
	CamelURLs instead of g_free().
	Fixes #329251.

2006-02-06  Chenthill Palanisamy  <pchenthill@novell.com>

	* calendar/e-cal-backend-exchange.c: (open_calendar), 
	(is_loaded), (class_init): Added the implementation.
	(set_mode): Notify read only status to the client. 
	
2006-02-02  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_load_source): Not builiding/updating cache in
	load_source, but doing it only after authenticating and setting up the
	folder hierarchy. Fixes #328507.

2006-01-30  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.5.9.0
	* NEWS : Updated

2006-01-23  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_start_book_view): Return OfflineUnavailable
	status in the offline mode if the book is not marked for offline.
	Fixes #327303, #327318.
	(e_book_backend_exchange_authenticate_user): In online mode, set the
	set the mode on ExchangeAccount before connecting. Fixes the issue of