@@ -1,3 +1,9 @@
+2006-02-07  Sushma Rai  <rsushma@novell.com>
+
+	* addressbook/e-book-backend-exchange.c (proppatch_date): Handling the
+	case when users unsets the b'day and anniversay dates set before.
+	Fixes #330221
+
 2006-02-06  Sushma Rai  <rsushma@novell.com>
 
 	* addressbook/e-book-backend-exchange.c 
